# shop_pilot

./: .dev.vars.example  .gitignore  Cargo.toml  README.md  wrangler.jsonc
.cargo/: config.toml
extension/: README.md  manifest.json  popup.html  popup.js
migrations/: 0001_init.sql
src/: ai.rs  engine.rs  lib.rs  login_flow.rs  main.rs  preferences.rs  protocol.rs  reply.rs  session.rs  sixty60.rs  sixty60_contract.rs  telegram.rs  worker_app.rs
