[package]
name = "shop_pilot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# Worker runtime deps only compile for the wasm32 target. Pure modules
# (protocol, engine, telegram parse/render) build natively so they can be
# unit-tested with a plain `cargo test`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
worker = { version = "0.8.3", features = ["d1"] }
